2008-02-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/mist/src/mist-style.c: (mist_style_draw_check),
	(mist_style_draw_option):
	I guess thix should fix 500952, but it's just a 30 seconds patch :)

2008-01-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	More contrast

2008-01-30  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_menuitem):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Set the xthickness of GtkMenu to 1px and special cased the menu item
	drawing to not draw a line on the left/right for the radius == 0
	case.
	This helps with usability, as no item is selected after opening a
	context menu, and also helps with menus that have an empty area because
	of scrolling.

2008-01-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Shading improvements in focus, more padding to CL_FOCUS_LABEL

2008-01-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.13.4 release.

2008-01-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/clearlooks.xml.in.in:
	Updated Clearlook's schema file

2008-01-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Clearlooks/Gummy MUST set reliefstyle = 1 to looks as the 
	default theme.
	You should update your Clearlooks themes!

2008-01-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
	Added a comment and more restrictive no-focus drawing for the
	notebook tab.

2008-01-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c: