@@ -1,3 +1,13 @@
+2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_menuitem):
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box):
+	* themes/Clearlooks/gtk-2.0/gtkrc:
+	Should read shadow... works on buttons but not for toolbars.
+	Modded gtkrc to TEST.
+
 2008-02-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/mist/src/mist-style.c: (mist_style_draw_check),
